--- a/WebContent/WEB-INF/classes/partials/dashboard.html
+++ b/WebContent/WEB-INF/classes/partials/dashboard.html
@@ -10,7 +10,8 @@
         </ol>
     </div>
 </div>
-<div class="row">
+{{loading}}
+<div class="row" data-ng-show="!loading">
     <div class="row">
 		<div class="col-lg-3 col-md-6">
 		    <div class="panel panel-green">
