--- a/WebContent/partials/rules.html
+++ b/WebContent/partials/rules.html
@@ -1,56 +1,87 @@
 <div class="row">
     <div class="col-lg-12">
         <h1 class="page-header">
-            Rules 
+            Rule Configuration 
         </h1>
         <ol class="breadcrumb">
         	<li class="active">
-            	<i class="fa fa-wrench"></i> Create New Rule
+            	<i class="fa fa-wrench"></i> Rule Configuration
             </li>
         </ol>
-        <div class="pull-right">
-			<div class="add-rule pull-right" id="btn-add-rule" ng-if="newRuleMode == false">
-		 		<a class="btn btn-primary" role="button" ng-click="addRule('')">Create New Rule</a>
-		 	</div>
-		</div>
     </div>
 </div>
+
 <div class="row row-centered">
 	<div data-ng-show="loadingRules">
 	    <i class="fa fa-spinner fa-spin fa-5x"></i>
 	</div>
 </div>
-<div class="col-lg-10" data-ng-show="!loadingRules">
-    <form name="rules" role="form">
-        <div class="form-group">
-            <div class="row">
-                <br>
-                <table class="table table-striped table-bordered table-hover dataTable no-footer" tr-ng-grid="" items="rules" page-items="5">
-				    <thead>
-				        <tr>
-				            <th field-name="name" enable-filtering="false">
-				            </th>
-				            <th field-name="description" display-name="Description" enable-filtering="false">
-				            </th>
-				            <th field-name="consequence.score" display-name="Fraud Score" enable-filtering="false" display-align="center">
-				            </th>
-				    	</tr>
-				    </thead>
-				</table>
-            </div>
-            <br>
-            <br>
-            <!-- Template for creating a new rule -->
-            <div ng-if="newRuleMode == true" ng-include src="'partials/new-rule.html'">
-            </div>
-        </div>
-    </form>
-</div>
-{{loadingRules}}
-<div data-ng-show="!loadingRules">
-    <i class="fa fa-cogs fa-4x"></i>
-</div>
-{{loadingRules}}
-<div data-ng-show="loadingRules">
-    <i class="fa fa-cogs fa-4x"></i>
+
+ <accordion close-others="oneAtATime">
+    <accordion-group heading="{{rule.name}}" ng-repeat="rule in rules">
+        <div class="row">
+			<div class="col-xs-6">
+				<div class="row">
+					<label class="medium" for="RuleName">Fraud Score</label>
+				</div>
+				<div class="row">
+					<input type="text" class="form-control" id="RuleName"
+						placeholder="Enter Name" ng-model="rule.setting.score" ng-required />
+				</div>
+				<div class="row">
+					<label class="medium" for="RuleName">Next Step Recommendation</label>
+				</div>
+				<div class="row">
+					<textarea type="text" class="form-control"
+					 	ng-model="rule.setting.recommendation"
+						ng-required />
+				</div>
+				<div class="row" ng-if=" !isEmpty(rule.setting.numberOfClaims) ">
+					<div class="row" >
+						<label class="small" for="Configuration">{{rule.setting.configHint}}</label>
+					</div>
+					<div class="row">
+						<input type="text" class="form-control" id="Configuration"
+							ng-model="rule.setting.numberOfClaims" ng-required />
+					</div>
+				</div>
+				<div class="row" ng-if=" !isEmpty(rule.setting.numberOfDays) ">
+					<div class="row" >
+						<label class="small" for="Configuration">{{rule.setting.configHint}}</label>
+					</div>
+					<div class="row">
+						<input type="text" class="form-control" id="Configuration"
+							ng-model="rule.setting.numberOfDays" ng-required />
+					</div>
+				</div>
+				<div class="row" ng-if=" !isEmpty( rule.setting.numberOfCorrespondence ) ">
+					<div class="row">
+						<label class="small" for="Configuration">{{rule.setting.configHint}}</label>
+					</div>
+					<div class="row">
+						<input type="text" class="form-control" id="Configuration"
+							 ng-model="rule.setting.numberOfCorrespondence" ng-required />
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-6 pull-right">
+				chart for rule, Maybe
+			</div>
+		</div>
+    </accordion-group>
+</accordion>
+
+<div class="row">
+	<div class="col-xs-6" id="btn-cancel-rule">
+		<div class="btn-group-justified" role="group"
+			aria-label="Justified button group">
+			<a class="btn btn-danger" role="button" ng-click="undoChanges()">Cancel Rule Updates</a>
+		</div>
+	</div>
+	<div class="col-xs-6" id="btn-add-rule">
+		<div class="btn-group-justified" role="group"
+			aria-label="Justified button group">
+			<a class="btn btn-primary" role="button" ng-click="saveChanges()">Save Rule Updates</a>
+		</div>
+	</div>
 </div>
